# ModelComprehensionV2

./: Diagrams that did not handle.txt  ModelComprehensionV2.py  README.md  Scratch3.py  Voronoi Tessellations.py  config.yml  ocrtest.py  pyproject.toml  scratch.py  scratch2.py  scratch3.py
diagrams/: output.csv
poster stuff/: diagrams.ipynb  sample_numbers.csv
